--- a/assets/main.css
+++ b/assets/main.css
@@ -189,7 +189,7 @@
  table.plenary{padding-top: 8px; background: #ffffff;}
  
  /* Registration and Directions iframes and Images */
- iframe.registration{display:block; margin:1em auto 2em auto; width:700px; height:1400px; border:none;}
+ iframe.registration{display:block; margin:1em auto 2em auto; width:100%; height:1600px; border:none; overflow: hidden;}
  iframe.directions{display:block; margin:1em auto 2em auto; width:800px; height:400px; border:none;}
  img.center{display:block; width:67%; margin:1em auto 2em auto;}
  
@@ -266,6 +266,7 @@ button.collapsible:hover {
  @media only screen and (max-width: 1100px) {
      body {width: 95%;}
      td.navigation{font-size:1.5em; padding:0px 20px 0px 20px;}
+     iframe.registration{ height: 1800px; }
      /*
      h2{font-size:3.00em;}
      p{font-size:1.5em; line-height:1.5em;}
