--- a/assets/main.css
+++ b/assets/main.css
@@ -168,16 +168,35 @@
    width: 18%;
  }
  
- div.scientist img{
-   width: 100px;
-   height: 100px;
- }
- 
  .scientists-container {
    width: 100%;
    text-align: center;
  }
- 
+
+div.scientist img{
+    width: 100px;
+    height: 100px;
+}
+
+.plenary-speakers-container {
+    width: 100%;
+    text-align: center;
+}
+
+div.pl-speaker img{
+    width: 100px;
+    height: 100px;
+}
+
+div.pl-speaker {
+    white-space:nowrap;
+    text-align:center;
+    vertical-align:middle;
+    padding:0px 0px 25px 0px;
+    display: inline-block;
+    width: 13%;
+}
+
  /* The Table on the Program Page */
  td.room{padding: 4px 12px 4px 4px; width: 90%; vertical-align:bottom; font-size:1.67em; color: #52739e; height:32px;}
  td.date{white-space:nowrap; width:130px; text-align:right; vertical-align:top; padding:4px 16px 0px 0px;}
