--- a/assets/calendar.css
+++ b/assets/calendar.css
@@ -249,6 +249,7 @@ div.plenary {
 .content {
   display: none;
   overflow: hidden;
+  margin-bottom: 40px;
 }
 
 @media only screen and (max-width: 1100px) {
