--- a/assets/main.css
+++ b/assets/main.css
@@ -281,6 +281,10 @@ button.collapsible:hover {
     color: #505050;
 }
 
+.sponsor-link {
+    margin: 0 25px 0 25px;
+}
+
  /* My hacky way of making the site mobile-friendly */
  @media only screen and (max-width: 1100px) {
      body {width: 95%;}
